--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,6 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  convex_bottom_bar: ^3.2.0
   flutter_contacts: ^1.1.6
   cloud_firestore: ^4.5.1
   intl: ^0.17.0
@@ -45,6 +44,7 @@ dependencies:
   firebase_storage: ^11.1.1
   flutter_riverpod: ^2.3.6
   riverpod: ^2.3.6
+  bottom_bar: ^2.0.3
 
 dev_dependencies:
   flutter_test:
